scrubbing contact info until launch

--- a/privacy.html
+++ b/privacy.html
@@ -191,6 +191,10 @@
 
     <main>
         <div class="content">
+            <div style="background: #FFF4E6; border-left: 4px solid #FF9800; padding: 1rem; margin-bottom: 2rem; border-radius: 4px;">
+                <strong style="color: #E65100;">Preview Version</strong>
+                <p style="margin: 0.5rem 0 0 0; color: #666;">This Privacy Policy is subject to change before the official launch of The Agora app. The final version will be published when the service becomes available.</p>
+            </div>
             <p class="last-updated"><strong>Last Updated: November 15, 2025</strong></p>
 
             <h2>Introduction</h2>
@@ -412,7 +416,7 @@
             <h3>5.1 Access and Portability</h3>
             <ul>
                 <li>You can access your personal information through the App settings</li>
-                <li>You can request a copy of all your data by emailing privacy@theagoraapp.com</li>
+                <li>You can request a copy of all your data via email (contact information will be provided at launch)</li>
                 <li>You can export your data in a machine-readable format</li>
                 <li>We will provide this within 30 days of your request</li>
             </ul>
@@ -496,7 +500,7 @@
                 <li>Delete all personal information</li>
                 <li>Notify the user that their account has been terminated</li>
             </ul>
-            <p>If you are a parent or guardian and believe your child under 18 has provided us with personal information, please contact us at privacy@theagoraapp.com.</p>
+            <p>If you are a parent or guardian and believe your child under 18 has provided us with personal information, please contact us (contact information will be provided at launch).</p>
 
             <h2>9. Sensitive Information</h2>
 
@@ -576,10 +580,8 @@
             </table>
 
             <h2>12. Contact Us</h2>
-            <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices:</p>
-            <p><strong>Email:</strong> privacy@theagoraapp.com<br>
-            <strong>Data Protection Officer:</strong> dpo@theagoraapp.com<br>
-            <strong>Response Time:</strong> We aim to respond to all inquiries within 30 days.</p>
+            <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, contact information will be provided when the service launches.</p>
+            <p><strong>Response Time:</strong> We aim to respond to all inquiries within 30 days.</p>
 
             <hr style="margin: 2rem 0; border: none; border-top: 1px solid #ddd;">
 
