--- a/terms.html
+++ b/terms.html
@@ -156,6 +156,10 @@
 
     <main>
         <div class="content">
+            <div style="background: #FFF4E6; border-left: 4px solid #FF9800; padding: 1rem; margin-bottom: 2rem; border-radius: 4px;">
+                <strong style="color: #E65100;">Preview Version</strong>
+                <p style="margin: 0.5rem 0 0 0; color: #666;">These Terms of Service are subject to change before the official launch of The Agora app. The final version will be published when the service becomes available.</p>
+            </div>
             <p class="last-updated"><strong>Last Updated: November 15, 2025</strong></p>
 
             <h2>1. Acceptance of Terms</h2>
@@ -326,8 +330,7 @@
             <p>IN NO EVENT SHALL OUR TOTAL LIABILITY EXCEED THE AMOUNT YOU PAID US IN THE PAST 12 MONTHS, OR $100, WHICHEVER IS GREATER.</p>
 
             <h2>9. Contact Information</h2>
-            <p>For questions about these Terms or the Service, contact us at:</p>
-            <p><strong>Email:</strong> legal@theagoraapp.com</p>
+            <p>For questions about these Terms or the Service, contact information will be provided when the service launches.</p>
 
             <hr style="margin: 2rem 0; border: none; border-top: 1px solid #ddd;">
 
