--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Agora - Where meaningful conversations happen. A platform for civil, in-person discussions. Coming soon.">
+    <meta name="keywords" content="The Agora, discussions, conversations, civil discourse">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://theagoraapp.com/">
+    <meta property="og:title" content="The Agora - Coming Soon">
+    <meta property="og:description" content="Where meaningful conversations happen. A platform for civil, in-person discussions.">
+
     <title>The Agora - Coming Soon</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
