--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <main>
         <div class="content">
             <h1>The Agora</h1>
-            <p class="subtitle">Where meaningful conversations happen</p>
-            <div class="coming-soon">Coming Soon</div>
+            <p class="subtitle">Because great minds think differently</p>
+            <div class="coming-soon">Coming Soon!</div>
         </div>
     </main>
 
