added support page and contact email

--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - The Agora</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="agora-logo-geometric.svg">
     <style>
         * {
             margin: 0;
@@ -416,7 +416,7 @@
             <h3>5.1 Access and Portability</h3>
             <ul>
                 <li>You can access your personal information through the App settings</li>
-                <li>You can request a copy of all your data via email (contact information will be provided at launch)</li>
+                <li>You can request a copy of all your data by emailing <a href="mailto:admin@theagoraapp.com">admin@theagoraapp.com</a></li>
                 <li>You can export your data in a machine-readable format</li>
                 <li>We will provide this within 30 days of your request</li>
             </ul>
@@ -500,7 +500,7 @@
                 <li>Delete all personal information</li>
                 <li>Notify the user that their account has been terminated</li>
             </ul>
-            <p>If you are a parent or guardian and believe your child under 18 has provided us with personal information, please contact us (contact information will be provided at launch).</p>
+            <p>If you are a parent or guardian and believe your child under 18 has provided us with personal information, please contact us at <a href="mailto:admin@theagoraapp.com">admin@theagoraapp.com</a>.</p>
 
             <h2>9. Sensitive Information</h2>
 
@@ -580,7 +580,7 @@
             </table>
 
             <h2>12. Contact Us</h2>
-            <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, contact information will be provided when the service launches.</p>
+            <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us at: <a href="mailto:admin@theagoraapp.com">admin@theagoraapp.com</a></p>
             <p><strong>Response Time:</strong> We aim to respond to all inquiries within 30 days.</p>
 
             <hr style="margin: 2rem 0; border: none; border-top: 1px solid #ddd;">
@@ -602,6 +602,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="terms.html">Terms of Service</a>
+            <a href="support.html">Support</a>
         </nav>
         <p>&copy; 2026 The Agora. All rights reserved.</p>
     </footer>
