--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - The Agora</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="agora-logo-geometric.svg">
     <style>
         * {
             margin: 0;
@@ -330,7 +330,7 @@
             <p>IN NO EVENT SHALL OUR TOTAL LIABILITY EXCEED THE AMOUNT YOU PAID US IN THE PAST 12 MONTHS, OR $100, WHICHEVER IS GREATER.</p>
 
             <h2>9. Contact Information</h2>
-            <p>For questions about these Terms or the Service, contact information will be provided when the service launches.</p>
+            <p>For questions about these Terms or the Service, please contact us at: <a href="mailto:admin@theagoraapp.com">admin@theagoraapp.com</a></p>
 
             <hr style="margin: 2rem 0; border: none; border-top: 1px solid #ddd;">
 
@@ -352,6 +352,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="privacy.html">Privacy Policy</a>
+            <a href="support.html">Support</a>
         </nav>
         <p>&copy; 2026 The Agora. All rights reserved.</p>
     </footer>
