--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Where meaningful conversations happen. A platform for civil, in-person discussions.">
 
     <title>The Agora - Coming Soon</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="agora-logo-geometric.svg">
     <style>
         * {
             margin: 0;
@@ -134,6 +134,7 @@
         <nav>
             <a href="terms.html">Terms of Service</a>
             <a href="privacy.html">Privacy Policy</a>
+            <a href="support.html">Support</a>
         </nav>
         <p>&copy; 2026 The Agora. All rights reserved.</p>
     </footer>
