updated privacy with data deltion information

--- a/privacy.html
+++ b/privacy.html
@@ -428,11 +428,29 @@
                 <li>Contact us if you need help correcting your information</li>
             </ul>
 
-            <h3>5.3 Deletion</h3>
+            <h3>5.3 Deletion and Account Removal</h3>
+            <p><strong>In-App Deletion:</strong></p>
             <ul>
                 <li>You can delete individual photos, messages, or profile elements through the App</li>
                 <li>You can delete your entire account through Settings → Account → Delete Account</li>
                 <li>Deletion is permanent and cannot be undone</li>
+            </ul>
+
+            <p><strong>Request Account and Data Deletion:</strong></p>
+            <p>If you are unable to access the App or prefer to request deletion via email, you can contact us at <a href="mailto:admin@theagoraapp.com">admin@theagoraapp.com</a> with the subject line "Account Deletion Request".</p>
+
+            <p>Please include in your request:</p>
+            <ul>
+                <li>The email address associated with your account</li>
+                <li>Your display name (if you remember it)</li>
+                <li>Confirmation that you want your account and all associated data permanently deleted</li>
+            </ul>
+
+            <p><strong>Deletion Timeline:</strong></p>
+            <ul>
+                <li>We will process your deletion request within 30 days</li>
+                <li>You will receive an email confirmation when deletion is complete</li>
+                <li>Some data may be retained for legal or safety reasons as outlined in Section 4.2 (Data Retention)</li>
             </ul>
 
             <h3>5.4 Location Permissions</h3>
